Fixed local module type availability

--- a/packages/pkg02/tsconfig.json
+++ b/packages/pkg02/tsconfig.json
@@ -7,5 +7,10 @@
     "declarationDir": "./lib/typings",
     "rootDir": "./src",
     "outDir": "./lib"
-  }
+  },
+  "references": [
+    {
+      "path": "../pkg01"
+    }
+  ]
 }
